@@ -11,4 +11,6 @@ python3 -c "import sys; orthographyName = open('mehri-soqotri/name.txt').read();
 python3 -c "import sys; orthographyName = open('german/name.txt').read(); titled = sys.stdin.read().replace('ISO-233 Arabic Romanization Template', orthographyName); replacements = open('german/replacements.txt').read(); print(titled.replace('[[\'11\', \'2\']]', replacements));" < ./template.html > ./germanQuickTypist.html
 python3 -c "import sys; orthographyName = open('pinyin/name.txt').read(); titled = sys.stdin.read().replace('ISO-233 Arabic Romanization Template', orthographyName); replacements = open('pinyin/replacements.txt').read(); print(titled.replace('[[\'11\', \'2\']]', replacements));" < ./template.html > ./pinyinQuickTypist.html
 python3 -c "import sys; orthographyName = open('polish/name.txt').read(); titled = sys.stdin.read().replace('ISO-233 Arabic Romanization Template', orthographyName); replacements = open('polish/replacements.txt').read(); print(titled.replace('[[\'11\', \'2\']]', replacements));" < ./template.html > ./polishQuickTypist.html
+python3 -c "import sys; orthographyName = open('icelandic/name.txt').read(); titled = sys.stdin.read().replace('ISO-233 Arabic Romanization Template', orthographyName); replacements = open('icelandic/replacements.txt').read(); print(titled.replace('[[\'11\', \'2\']]', replacements));" < ./template.html > ./icelandicQuickTypist.html
+
 
