@@ -1,0 +1,24 @@
+[
+            // See: https://en.wikipedia.org/wiki/Icelandic_orthography
+            // Áá Ðð Éé Íí Óó Úú Ýý Þþ Ææ Öö
+			["A&'", "Á"],
+			["a&'", "á"],
+			["D&'", "Ð"],
+			["d&'", "ð"],
+			["E&'", "É"],
+			["e&'", "é"],
+			["I&'", "Í"],
+			["i&'", "í"],
+			["O&'", "Ó"],
+			["o&'", "ó"],
+			["U&'", "Ú"],
+			["u&'", "ú"],
+			["Y&'", "Ý"],
+			["y&'", "ý"],
+			["T&'", "Þ"],
+			["t&'", "þ"],
+			["A&e", "Æ"],
+			["a&e", "æ"],
+			["O&e", "Ö"],
+			["o&e", "ö"]
+			];
