@@ -30,3 +30,4 @@ At the same time the following orthographies have been added: French, Spanish or
 2021-03-02 (no version change)
 - Add support for Pinyin
 - Add support for Polish
+- Add support for Icelandic
